# TFG

./: .gitignore  CLAUDE.md  config.py  main.py  pyproject.toml  requirements.txt  sonar-project.properties
.claude/: settings.local.json
.github/workflows/: ci.yml
bbdd/: equivalencias.sqlite
controller/: chart_controller.py  datos_equivalentes_controller.py  equivalencias_controller.py  main_controller.py
export/: .sqlite  AAPL.sqlite  AAPL.xlsx  AIR.sqlite  AIR.xlsx  META.sqlite  META.xlsx  NFLX.sqlite  NFLX.xlsx  NVDA.sqlite  NVDA.xlsx  SAN.sqlite  SAN.xlsx  TEF.sqlite  TEF.xlsx
model/: data_filter.py  data_import_export.py  data_manager.py  database.py  database_initializer.py  database_manager.py  database_setup.py  import_export_handler.py  pandas_model.py
scrapers/: google_finance_scraper.py  macrotrends_scraper.py  yahoo_finance_scraper.py
scrappers/: google_finance_scraper.py  macrotrends_scraper.py  yahoo_finance_scraper.py
tests/: integration_test.py  performance_tests.py  test_unit.py
view/: acerca_de_view.py  ayuda_view.py  equivalencias_view.py  main_view.py
