[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tfg-financial-scraper"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "selenium",
    "PyQt5",
    "matplotlib",
    "yfinance",
    "openpyxl",
    "numpy",
    "beautifulsoup4",
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["controller*", "model*", "view*", "scrapers*"]
